--- a/BibTeX-Parser/dist.ini
+++ b/BibTeX-Parser/dist.ini
@@ -1,8 +1,8 @@
 name    = BibTeX-Parser
-version = 0.65
-author  = Gerhard Gossen <gerhard.gossen@googlemail.com>
+version = 0.66
+author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com>
 license = Perl_5
-copyright_holder = Gerhard Gossen
+copyright_holder = Gerhard Gossen and Boris Veytsman
 
 [@Classic]
 
