--- a/LaTeX-ToUnicode/dist.ini
+++ b/LaTeX-ToUnicode/dist.ini
@@ -1,9 +1,9 @@
 name    = LaTeX-ToUnicode
-author  = Gerhard Gossen <gerhard.gossen@googlemail.com>
+author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com>
 license = Perl_5
-copyright_holder = Gerhard Gossen
-copyright_year   = 2010
-version = 0.03
+copyright_holder = Gerhard Gossen and Boris Veytsman
+copyright_year   = 2015
+version = 0.04
 
 [@Classic]
 [Prereqs]
