Jumped version numbers

--- a/LaTeX-ToUnicode/dist.ini
+++ b/LaTeX-ToUnicode/dist.ini
@@ -2,8 +2,8 @@ name    = LaTeX-ToUnicode
 author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com>
 license = Perl_5
 copyright_holder = Gerhard Gossen and Boris Veytsman
-copyright_year   = 2015
-version = 0.04
+copyright_year   = 2010-2016
+version = 0.05
 
 [@Classic]
 [Prereqs]
