--- a/LaTeX-ToUnicode/dist.ini
+++ b/LaTeX-ToUnicode/dist.ini
@@ -1,9 +1,9 @@
 name    = LaTeX-ToUnicode
-author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com>
+author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com> and Karl Berry <karl@freefriends.org>
 license = Perl_5
 copyright_holder = Gerhard Gossen and Boris Veytsman
-copyright_year   = 2010-2016
-version = 0.05
+copyright_year   = 2010-2020
+version = 0.11
 
 [@Classic]
 [Prereqs]
