--- a/BibTeX-Parser/dist.ini
+++ b/BibTeX-Parser/dist.ini
@@ -1,8 +1,8 @@
 name    = BibTeX-Parser
-version = 1.03
-author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com>
+version = 1.04
+author  = Gerhard Gossen <gerhard.gossen@googlemail.com> and Boris Veytsman <boris@varphi.com> and Karl Berry <karl@freefriends.org>
 license = Perl_5
-copyright_holder = Gerhard Gossen and Boris Veytsman
+copyright_holder = Gerhard Gossen and Boris Veytsman and Karl Berry
 
 [@Classic]
 
